# rust-web-example

./: .env  .gitignore  Cargo.toml  README.md
config/: log4rs.yaml
script/ddl/: database.sql
src/: main.rs
src/config/: boot_config.rs  mod.rs
src/controller/: mod.rs  user_controller.rs  verify_code_controller.rs
src/core/: error.rs  mod.rs
src/dao/: mod.rs
src/mid/: mod.rs
src/model/domain/: mod.rs  tm_user.rs
src/model/dto/: mod.rs  user_dto.rs
src/model/vo/: mod.rs  user_vo.rs
src/service/: cache_service.rs  mod.rs  user_service.rs  verify_code_service.rs
src/util/: jwt_util.rs  mod.rs  password_encoder.rs  rand_util.rs  verify_code.rs
