[package]
name = "rust-web-example"
version = "0.1.0"
authors = ["luokai <kaiv2@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#serde and base types
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
lazy_static = "1.4.0"
#log
log = "0.4"
log4rs = "0.13.0"
#runtime
tokio = { version = "0.2", features = ["full"] }
#rbatis orm dep
rbatis-core = { version = "1.4.2", features = ["all"]}
rbatis =  { version = "1.4.2" }

#web server
actix-web = "2.0"
# actix-service = "1.0"
actix-http = "1.0"
actix-rt = "1.0"
actix-web-httpauth = "0.4.2"


#redis
redis = "0.16.0"

#jwt
jsonwebtoken = "7"
#uuid
uuid = "0.8"
md5 = "0.7.0"

#validator
validator = "0.10"
validator_derive = "0.10"

#rand
rand = "0.7"

dotenv = "0.15.0"
config = "0.10.1"
